<resources>
    <string name="app_name">CM Sharing</string>
    <string name="save_menu_option">Save</string>
    <string name="fullName">Guest</string>
    <string name="subscriptionCaption">Edit your profile in order to inspire confidence to your passengers!</string>
    <string name="profile_pic_description">User profile picture</string>
    <string name="title_activity_main">CM Sharing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">User Profile</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_profile_title">User Profile</string>

    <string name="fullNameHelper">Enter your full name</string>
    <string name="nicknameHelper">Enter the username you want to associate with your account</string>
    <string name="emailHelper">Enter your email address</string>
    <string name="locationHelper">Enter your home address</string>

    <string name="fullNameMissingError">Full name is required</string>
    <string name="nickNameMissingError">Username is required</string>
    <string name="emailMissingError">Email is required</string>
    <string name="locationMissingError">Location is required</string>
    <string name="provideAllInfoError">Please provide all required informations</string>
    <string name="guest">Guest</string>
    <string name="car_name">Car name</string>
    <string name="edit">Edit</string>
    <string name="car_model">Enter the model of your car</string>
    <string name="locationName">Location Name</string>
    <string name="hintNumberSeats">Seats</string>
    <string name="priceHint">Price</string>
    <string name="OtherInfoHint">Insert detail</string>
    <string name="gg_mm_yyyy">gg/mm/yyyy</string>
    <string name="date_text">--/--/----</string>
    <string name="time_text">--:--</string>
    <string name="_h_est">3h est.</string>
    <string name="n_h">n h</string>
    <string name="emptyDuration">-</string>
    <string name="nome_macchina">nome macchina</string>
    <string name="other_infos">Other infos</string>
    <string name="null_value">"null"</string>
    <string name="EmptyDuration">-</string>
    <string name="EmptyPrice">0.0</string>
    <string name="EmptySeats">0</string>
    <string name="no_trip_present">No trip present</string>

    <string name="InterestedUsersText">Interested Users</string>
    <string name="NoOtherInfos">No additional info available.</string>
    <string name="NoIntUsers">No interested users at the moment…</string>
    <string name="rememberMe">Remember me</string>
    <string name="remove_trip">Remove trip</string>
    <string name="Until">Until</string>
    <string name="Departure">Departure</string>
    <string name="Place">Place</string>
    <string name="StartingFrom">Starting From</string>
    <string name="Arrival">Arrival</string>
    <string name="OrLess">Or less</string>
    <string name="Seats">Seats</string>
    <string name="Apply">Apply</string>
    <string name="Discard">Discard</string>

    <string name="Welcome">Traveling helps<br/>\n
        ones to understand<br/>\n
        they are not<br/>\n
        actually lost.</string>
    <string name="car_logo_description">Car logo</string>

    <string name="trip_list">My Trips</string>
    <string name="interested_trip_list">Trips I\'m interested on</string>
    <string name="bought_trip_list">Trips I bought</string>
    <string name="others_trip_list">Others Trips</string>
    <string name="nicknameSection">Nickname</string>
    <string name="emailSection">Email</string>
    <string name="locationSection">Location</string>
    <string name="rate_trip">Rate trip</string>
    <string name="logout">Logout</string>


    <string name="map">Location Map</string>
    <string name="delete">Delete</string>
    <string name="_18_30">18:30</string>
    <string name="torino">Torino</string>
    <string name="driver_rate">Driver rate</string>
    <string name="passenger_rate">Passenger rate</string>
    <string name="comment_optional">Comment (Optional)</string>
    <string name="add_review">Add Review</string>
    <string name="tutorial_a">Here you can see\n<br/>
        the trips you can join on</string>
    <string name="tutorial_a_1">Here you can\n<br/>
        filter the trips</string>
</resources>