<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@mipmap/basic_profile_pic_foreground"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_trip_list"
            android:icon="@drawable/trip_icon"
            android:title="@string/trip_list" />
        <item
            android:id="@+id/nav_interested_trip_list"
            android:icon="@drawable/trip_icon"
            android:title="@string/interested_trip_list" />
        <item
            android:id="@+id/nav_bought_trip_list"
            android:icon="@drawable/trip_icon"
            android:title="@string/bought_trip_list" />
        <item
            android:id="@+id/nav_others_trip_list"
            android:icon="@drawable/trip_icon"
            android:title="@string/others_trip_list" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout"
            />
    </group>
</menu>