<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDFCFC"
    android:backgroundTint="#EDFCFC">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />


    <ImageView
        android:id="@+id/carLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/car_logo_description"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="@id/guideline0"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:srcCompat="@drawable/photo_2021_06_03_15_50_33" />


    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#EDFCFC"
        android:backgroundTint="#EDFCFC"
        android:contentDescription="@string/car_logo_description"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        app:srcCompat="@drawable/couple" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:lines="4"
        android:text="@string/Welcome"
        android:textColor="#08145A"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline0"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintVertical_bias="0.8">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/rememberMeCheck"
            app:layout_constraintEnd_toEndOf="@id/guideline8"
            app:layout_constraintStart_toStartOf="@id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/rememberMeCheck"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/rememberMe"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline8"
            app:layout_constraintStart_toStartOf="@id/guideline7"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>